# lute-xhosa

./: .gitignore  DATASETS.md  DESIGN.md  README.md  pyproject.toml
lute_xhosa_parser/: morphology.py  parser.py  rules.py
scripts/: check_collisions.py  generate_css.py
tests/: test_morphology.py
