[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lute-xhosa"
version = "0.1.0"
description = "isiXhosa language parser plugin for Lute3, splitting agglutinative noun/verb morphology into trackable tokens."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["lute3"]

[project.entry-points."lute.plugin.parse"]
lute_xhosa = "lute_xhosa_parser.parser:XhosaParser"

[tool.setuptools.packages.find]
include = ["lute_xhosa_parser*"]
